mailinglist/output_launchpad/1878627
audio/mixeng build failure using Clang 10

When building with Clang 10 on Fedora 32, we get:

    CC      audio/mixeng.o
  audio/mixeng.c:274:34: error: implicit conversion from 'unsigned int' to 'float' changes value from 4294967295 to 4294967296 [-Werror,-Wimplicit-int-float-conversion]
  static const float float_scale = UINT_MAX / 2.f;
                                   ^~~~~~~~ ~
  /usr/lib64/clang/10.0.0/include/limits.h:56:37: note: expanded from macro 'UINT_MAX'
  #define UINT_MAX  (__INT_MAX__  *2U +1U)
                     ~~~~~~~~~~~~~~~~~^~~

Discussion about fixing:

https://<email address hidden>/msg699807.html

Patch posted:
https://<email address hidden>/msg706322.html

Merged in commit 9c61fcc89a70256c19047d251aa44f666f06089c.

